[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentphased"
version = "0.1.0"
description = "Unified agentic platform -- glues AgentID, AgentMem, and Agentool."
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sse-starlette>=2.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentphased*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vercel]
entrypoint = "agentphased.server:app"